--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,12 @@
 			<version>2.4.4</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
+		<dependency>
+			<groupId>org.xerial</groupId>
+			<artifactId>sqlite-jdbc</artifactId>
+			<version>3.36.0.3</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.h2database</groupId>
