Added SQLite config settings to application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 #spring.mvc.view.prefix=frontend/src
+
+#SQLite related configs
+spring.jpa.database-platform=de.fhws.simplex.SQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
+
+spring.datasource.url = jdbc:sqlite:ranked_table.db
+spring.datasource.driver-class-name = org.sqlite.JDBC
+
+spring.datasource.username = admin
+spring.datasource.password = admin
