Added folder structure to project, adjusted SQLDialect location in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #spring.mvc.view.prefix=frontend/src
 
 #SQLite related configs
-spring.jpa.database-platform=de.fhws.simplex.SQLDialect
+spring.jpa.database-platform=de.fhws.simplex.Repository.SQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
 
